welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.error
ColumnByColumn:8: error: 'while' expected but 'var' found.
  var h=getMondeHauteur()
  ^ColumnByColumn:9: error: '(' expected but ';' found.
  var l=getMondeLargeur()
^