welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.code
vaar cpt=0
override def run() {
  setPos(0,0)
  do {
    avance()
    cpt+=1
    ecritMessage()
  }
  var h=getMondeHauteur()
  var l=getMondeLargeur()
  
}